Table producto {
  id_producto int [pk, increment]
  nombre varchar(100) [not null]
  precio decimal(10,2) [not null, note: 'CHECK (precio > 0)']
  stock int [not null, note: 'CHECK (stock >= 0)']
}

Table compras {
  id_compra int [pk, increment]
  fecha_compra datetime      [not null]
  estado varchar(20)   [not null, note: "PENDIENTE / COMPLETADA / CANCELADA"]
  total decimal(10,2) [not null, note: 'CHECK (total >= 0)']
}

Table detalle_compra {
  id_detalle int [pk, increment]
  id_compra int [not null]
  id_producto int [not null]
  cantidad int [not null, note: 'CHECK (cantidad > 0)']
  precio_unitario decimal(10,2) [not null]
  subtotal decimal(10,2) [not null, note: 'CHECK (subtotal > 0)']
}

Table pagos {
  id_pago int [pk, increment]
  id_compra int [not null]
  monto decimal(10,2) [not null, note: 'CHECK (monto > 0)']
  metodo_pago varchar(40) [not null]
  fecha_pago datetime [not null]
}

Ref: detalle_compra.id_compra > compras.id_compra
Ref: detalle_compra.id_producto > producto.id_producto
Ref: pagos.id_compra > compras.id_compra
